# topf

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml  publish-on-pypi.yml
examples/: topf_basic_examples.ipynb  topf_examples3d.ipynb
examples/TopologicalClusteringBenchmarkSuite/dim1/: 4spheresTRUE.csv  EllipsesInEllipsesTRUE.csv  HalvedCircleTRUE.csv  spheresAndGridTRUE.csv
examples/TopologicalClusteringBenchmarkSuite/dim2/: SphereinCircleTRUE.csv  Two_Spheres_2_CirclesTRUE.csv  spaceship_v2TRUE.csv
src/topf/: HomologyGeneratorsMultiD.jl  JuliaManifest.toml  JuliaProject.toml  __init__.py  topfmain.py
